--- a/TestSpace.ipynb
+++ b/TestSpace.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "c66ad75e",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "8c03a760",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "1ad23ab3",
    "metadata": {
     "scrolled": true
@@ -107,7 +107,7 @@
       "Business\n",
       "बिज़नेस\n",
       "Newsletters\n",
-      "The Indian Express Newsletter. (Opens in new window)\n",
+      "The Indian Express Newsletter.\n",
       ".(Opens in new window)\n",
       ".(Opens in new window)\n",
       ".(Opens in new window)\n",
@@ -115,42 +115,26 @@
       "Edition\n",
       "India\n",
       "International\n",
-      ".(Open in new tab)\n",
       "ePaper\n",
       ".Opens in new window\n",
       "Today’s Paper\n",
       ".Opens in new window\n",
       "Journalism of Courage\n",
       "Home\n",
-      ".Opens in new window\n",
       "ePaper\n",
-      ".Opens in new window\n",
       "India\n",
-      ".Opens in new window\n",
       "UPSC\n",
-      ".Opens in new window\n",
       "Premium\n",
-      ".Opens in new window\n",
       "Entertainment\n",
-      ".Opens in new window\n",
       "Politics\n",
-      ".Opens in new window\n",
       "Sports\n",
-      ".Opens in new window\n",
       "World\n",
-      ".Opens in new window\n",
       "Explained\n",
-      ".Opens in new window\n",
       "Opinion\n",
-      ".Opens in new window\n",
       "Business\n",
-      ".Opens in new window\n",
       "Cities\n",
-      ".Opens in new window\n",
       "Lifestyle\n",
-      ".Opens in new window\n",
       "Tech\n",
-      ".Opens in new window\n",
       "Subscribe\n",
       "Sign In\n",
       ".Opens in new window\n",
@@ -159,7 +143,6 @@
       "Research\n",
       "Mini Crossword\n",
       "Fresh Take\n",
-      "Get Monthly Plan\n",
       "Express Shorts\n",
       "Archives\n",
       "🎙️ Podcast\n",
@@ -245,19 +228,21 @@
       "Post Comment\n",
       "Read Comments\n",
       "Advertisement\n",
-      "Crew ‘failed to control train at danger signal’: Initial report into Bilaspur crash\n",
-      "India\n",
+      "New NCERT Class 7 book traces algebra & more to ancient India\n",
+      "Education\n",
       "4 hr ago\n",
-      "An initial inquiry report on the Chhattisgarh train accident blames the train crew for failing to control the train at a danger signal. 11 people were killed and 20 injured in the collision between a passenger and goods train. The crew is being investigated for a Signal Passed at Danger event. The Commissioner of Railway Safety is conducting an inquiry and seeking information from witnesses.\n",
+      "NCERT's Class 7 mathematics textbook, the second part of Ganita Prakash series, teaches students about ancient Indian contributions to the subject. It features references to Sanskrit texts and problems from Indian mathematicians, and discusses their influence on the development of algebra by Arab mathematicians. It promotes correct understanding of history, instilling a sense of pride in students.\n",
       "View all shorts\n",
       "Live\n",
       "Blog\n",
-      "Bihar Election 2025 Phase 1 Voting Live Updates: Polling underway in 121 seats; Tejashwi, Tej Pratap, Samrat Choudhary in fray\n",
-      "7 minutes ago\n",
-      "Rahul Gandhi press conference LIVE updates: EC, BJP hit back at LoP; ‘why were objections not raised’, asks poll official\n",
-      "12 hours ago\n",
-      "Bilaspur Train Accident News Live Updates: Trains cancelled, probe launched after derailment kills 8\n",
-      "1 day ago\n",
+      "India vs Pakistan Live Cricket Score, Hong Kong Sixes 2025: Uthappa-Chipli start for IND 21/0 vs PAK in Mong Kok\n",
+      "2 minutes ago\n",
+      "US Airport Government Shutdown Live Updates: Flight cuts ordered at major airports as shutdown strains air traffic control; airlines move to adjust schedules\n",
+      "2 hours ago\n",
+      "Chess World Cup LIVE Updates, Round 2 Tiebreaks: Praggnanandhaa, Vidit Gujrathi, Pranav qualify for Round 3; Nihal, Raunak crash out\n",
+      "11 hours ago\n",
+      "Delhi News LIVE Updates: Vande Mataram relevant in every era, says PM Modi after inaugurating year-long commemoration of ‘Vande Mataram’\n",
+      "39 minutes ago\n",
       "PHOTOS\n",
       "In Pics: From Concept Supercars to Electric SUVs – Innovation at Bharat Mobility Global Expo 2025\n",
       "Samsung launches Galaxy S25 series phones: Here’s a quick look\n",
@@ -265,68 +250,69 @@
       "Earth, space, and beyond: 12 new breathtaking images shared by NASA\n",
       "Lunar Eclipse 2022 images: Pictures of the last total lunar eclipse for next three years\n",
       "Top Stories\n",
-      "Voting begins in 121 seats; Tejashwi, Tej Pratap, Samrat Choudhary in fray\n",
-      "Corruption cloud: Skill Ministry blacklists 178 training partners\n",
+      "Remove stray dogs from public premises, relocate to shelters: Supreme Court\n",
+      "Cities\n",
+      "Air Traffic Control glitch triggers massive delays at Delhi airport; flight ops affected across North India\n",
       "Entertainment\n",
-      "25 years of Indian cinema: With Lagaan, Gadar, Dil Chahta Hai, 2001 changed our films\n",
+      "Katrina Kaif, Vicky Kaushal welcome baby boy: 'Our bundle of joy has arrived'\n",
       "Entertainment\n",
-      "Why Bhoothakaalam remains Dies Irae director Rahul Sadasivan's best film\n",
+      "Katrina Kaif's father was 'not an influence, not a part of family', she learnt to be 'completely non-judgemental' from mother: 'I have never met him since'\n",
       "Trending\n",
-      "Zohran Mamdani closes victory speech as mayor of New York to 'Dhoom Machale'; netizens hail ‘coolest victory speech’\n",
+      "London’s ‘little India’ video shows streets filled with trash, sparks debate over civic sense: ‘Proud of doing stupid things’\n",
       "Trending\n",
-      "‘Kerala, I am disappointed’: British vlogger disgusted by littering at Varkala cliffs, calls for better waste management\n",
+      "Indian techie pays off Rs 53 lakh loan in 6 years, shares smart repayment strategy: ‘Bank balance is nearly empty, but relief is priceless’\n",
       "Sports\n",
-      "RCB put on sale months after stampede during IPL 2025 victory parade\n",
+      "India vs Pakistan Live Cricket Score, Hong Kong Sixes 2025\n",
       "Sports\n",
-      "Chess World Cup: Diptayan Ghosh, who once took a 2-year break to work in a bank, beats 2-time world championship contender Ian Nepomniachtchi\n",
+      "T20 World Cup 2026: Narendra Modi stadium in Ahmedabad shortlisted to host final\n",
       "Opinion\n",
-      "In New York, Zohran Mamdani crafted a campaign that went beyond identity -- that's how he won\n",
+      "From Zohran Mamdani, Nehru and the forgotten thread of freedom\n",
       "Explained\n",
-      "Why Bill Gates' changed climate views are in step with India's\n",
+      "ExplainSpeaking: Has Bihar’s growth reduced the gap with the rest of India?\n",
       "Lifestyle\n",
-      "Gwyneth Paltrow says drinking made her menopause symptoms 'go out of control'\n",
+      "How Bengal’s widows overcame dietary restrictions and birthed delicacies that made their way into mainstream cuisine\n",
       "Technology\n",
-      "Can OpenAI’s new ‘IndQA’ benchmark help Indic LLMs close the gap?\n",
+      "This map lets you explore the Roman Empire’s ancient transport network\n",
       "Advertisement\n",
       "Must Read\n",
       "Sports\n",
-      "RCB put on sale months after stampede during IPL 2025 victory parade\n",
+      "India vs Pakistan Live Cricket Score, Hong Kong Sixes 2025\n",
       "Sports\n",
-      "Chess World Cup: Diptayan Ghosh, who once took a 2-year break to work in a bank, beats 2-time world championship contender Ian Nepomniachtchi\n",
+      "T20 World Cup 2026: Narendra Modi stadium in Ahmedabad shortlisted to host final\n",
       "Sports\n",
-      "Rishabh Pant returns as India announce squad for South Africa Test series\n",
+      "At the Chess World Cup, a question for Grandmasters: What after work? Their reply: Take a walk\n",
       "Technology\n",
-      "Can OpenAI’s new ‘IndQA’ benchmark help Indic LLMs close the gap?\n",
+      "This map lets you explore the Roman Empire’s ancient transport network\n",
       "Technology\n",
-      "With Project Suncatcher, Google joins the club to put AI data centres in space, but feasibility remains a challenge\n",
+      "How AI and social media contribute to ‘Brain Rot’\n",
       "Technology\n",
-      "Apple’s first budget MacBook may launch in early 2026: Here’s what to expect\n",
+      "Industry body representing Microsoft, AWS seeks copyright exemption to train AI in India\n",
       "Lifestyle\n",
-      "Gwyneth Paltrow says drinking made her menopause symptoms 'go out of control'\n",
+      "How Bengal’s widows overcame dietary restrictions and birthed delicacies that made their way into mainstream cuisine\n",
       "Advertisement\n",
       "Buzzing Now\n",
       "Trending\n",
-      "Zohran Mamdani closes victory speech as mayor of New York to 'Dhoom Machale'; netizens hail ‘coolest victory speech’\n",
+      "London’s ‘little India’ video shows streets filled with trash, sparks debate over civic sense: ‘Proud of doing stupid things’\n",
       "Trending\n",
-      "‘Kerala, I am disappointed’: British vlogger disgusted by littering at Varkala cliffs, calls for better waste management\n",
+      "Indian techie pays off Rs 53 lakh loan in 6 years, shares smart repayment strategy: ‘Bank balance is nearly empty, but relief is priceless’\n",
       "Trending\n",
-      "'In India, at least I’ll be happy': Indian creator decides to leave US over racism; says the America she admired no longer exists\n",
+      "‘Travel India with at least a decent budget’: British family’s Vande Bharat experience video wins hearts online\n",
       "Trending\n",
-      "Rajasthan vegetable seller borrows money for lottery tickets, wins Rs 11 crore: ‘Meri saari gareebi khatam ho gayi’\n",
+      "Indian techie’s parents’ reaction to his first salary wins internet’s hearts: ‘This is a lot of money’\n",
       "Trending\n",
-      "‘India deserves a world record for this’: Australian traveller gets emotional after experiencing 'unmatched' hospitality\n",
-      "Nov 06:\n",
+      "'What’s your skincare routine?’: Harleen Deol’s question makes PM Modi 'blush' during a meeting with Women’s World Cup winners\n",
+      "Nov 07:\n",
       "Latest News\n",
       "01\n",
-      "After Donald Trump, Vladimir Putin orders Russia to prepare for nuclear weapons tests\n",
+      "Israel launches strikes on Hezbollah targets in Lebanon\n",
       "02\n",
-      "South Africa in India with ‘hope’ aka Bavuma\n",
+      "Chess World Cup: Praggnanandhaa survives massive scare, Vidit Gujrathi knocks out Argentine prodigy Faustino Oro\n",
       "03\n",
-      "‘Never seen men so scared, want my cabinet like that’: Trump jokes about Xi’s officials\n",
+      "WPL retentions talking points: Deepti Sharma released by UP Warriorz, World Cup heroes Kranti Gaud and Sree Charani back in auction pool\n",
       "04\n",
-      "RCB put on sale months after stampede during IPL 2025 victory parade\n",
+      "‘Morne has helped me a lot’: Shivam Dube reveals role of Morkel’s ‘small small tips’ in improving his bowling\n",
       "05\n",
-      "Chess World Cup: Pentala Harikrishna’s queen sacrifice variation, a 9-year-old ploy, gets him a win\n",
+      "‘A great thing for America’: Donald Trump reacts to Nancy Pelosi’s retirement\n",
       "Advertisement\n",
       "Link Subscription\n",
       "Subscribe\n",
@@ -376,7 +362,6 @@
       "Research\n",
       "Mini Crossword\n",
       "Fresh Take\n",
-      "Get Monthly Plan\n",
       "Express Shorts\n",
       "Archives\n",
       "🎙️ Podcast\n",
@@ -393,13 +378,12 @@
       "Premium\n",
       "UPSC\n",
       "Today's E-paper\n",
-      "Nov 06, 2025\n",
+      "Nov 07, 2025\n",
       "Trending Topics\n",
       "Legal News\n",
       "Research\n",
       "Mini Crossword\n",
       "Fresh Take\n",
-      "Get Monthly Plan\n",
       "Express Shorts\n",
       "Archives\n",
       "🎙️ Podcast\n",
@@ -509,23 +493,27 @@
       "Ghaziabad Weather\n",
       "Bulandshahr Weather\n",
       "Meerut Weather\n",
+      "Katrina Kaif Baby News\n",
+      "Bihar Elections Live\n",
+      "Bihar Voter List 2025\n",
+      "Mutual Funds\n",
       "LATEST STORIES\n",
-      "Rajasthan’s Ojaswini Saraswat emerges as winner of Governor’s Cup golf tourney\n",
-      "PU Bachao Morcha says Nov 10 massive protest on: ‘Centre is making a mockery of the issue’\n",
-      "‘Shah Rukh Khan can be the Iron Man of horror universe’: Thamma director defends item numbers in Ayushmann Khurrana film\n",
-      "Why Bhoothakaalam remains Dies Irae director Rahul Sadasivan’s best film and how it shows the supernatural may be less harmful than loneliness\n",
-      "Doctor reveals impact of air pollutants on newborns: ‘Babies spend longer time in the nursery, need respiratory help’\n",
-      "25 years of Indian cinema: With Lagaan, Gadar, Dil Chahta Hai, 2001 changed our films\n",
-      "IND vs AUS 4th T20 Match Pitch-Weather Report: Will rain play spoilsport in high-scoring Gold Coast?\n",
-      "Emerging from shadow of tragedy, Vijay throws down gauntlet to DMK: ‘2026 contest only between two parties’\n",
-      "News Today Live Updates, 6 November: No theft here: Names Rahul flagged have voted, with valid address and ID card\n",
-      "Delhi NCR AQI today, November 6: Capital AQI nears 600 early morning; Noida, Gurgaon air quality in ‘severe’ category\n",
-      "Rahul Gandhi’s Haryana ‘vote chori’ claim puts spotlight back on duplicate voters — and a software EC stopped using\n",
-      "Elon Musk’s SpaceX launches 29 Starlink satellites into space using Falcon 9 rocket: WATCH\n",
-      "Typhoon Kalmaegi leaves 114 dead, 127 missing in Philippines, many in province recovering from quake\n",
-      "On pretext of providing study visa to UK, man rapes Himachal woman during fake medical check-up in Kharar\n",
-      "BJP alleges large-scale illegal mining in Mohali’s Majri block, claims state losing Rs 1,000 crore annually\n",
-      "Canada opens gates to H-1B visa holders, slashes mass immigration\n",
+      "Salman Khan was offered Aishwarya Rai’s brother’s role in Josh; Shah Rukh Khan left after hearing Aamir wants to play lead: producer\n",
+      "Frankenstein movie review: Guillermo del Toro infuses humanity into the classic horror tale\n",
+      "Anunay Sood’s girlfriend Shivani says, ‘trying to understand life without you’; Las Vegas Police say ‘non-criminal’ report filed influencer found dead\n",
+      "Prashant Kishor and the politics of dare: Win or lose, Bihar needs his political imagination\n",
+      "Reform or roadblock? Kerala’s proposed right to disconnect bill triggers debate on work-life balance\n",
+      "Trump administration announces Boeing deals in Central Asia\n",
+      "Katrina Kaif’s father was ‘not an influence, not a part of family’, she learnt to be ‘completely non-judgemental’ from mother: ‘I have never met him since’\n",
+      "Personal assistant, close aide of Himachal BJP MLA Hans Raj booked days after fresh allegations of harassment surfaced against legislator\n",
+      "Who’s the gentleman in Red: This World Cup winning captain’s transformation leaves netizens zapped\n",
+      "What to expect at India Art Fair 2026?\n",
+      "London’s ‘little India’ video shows streets filled with trash, sparks debate over civic sense: ‘Proud of doing stupid things’\n",
+      "Lawyer breaks down after SC orders removal of stray dogs from schools, bus stands, public institutions: VIDEO\n",
+      "Zarine Khan, Sanjay Khan’s wife and mother of Zayed Khan, dies at 81\n",
+      "This map lets you explore the Roman Empire’s ancient transport network\n",
+      "Why is now the right time to pursue international education abroad\n",
+      "British national facing deportation escapes from Delhi airport immigration area\n",
       "Follow Us\n",
       "opens in a new window\n",
       "opens in a new window\n",
@@ -579,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "8eeb7d46",
    "metadata": {},
    "outputs": [],
@@ -980,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "fdee7d72",
    "metadata": {},
    "outputs": [
